Fix blog image overflow for mobile

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -764,6 +764,7 @@ button.link {
 	background-color: #ffffff;
 	height: 22rem;
 	box-shadow: 1px 2px 4.9px 0.1px rgba(112, 130, 55, 0.1);
+	overflow: hidden;
 	//margin: 1rem 1rem;
 }
 
